--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/analytics": "^1.3.1",
     "ai": "file:",
     "axios": "^1.7.5",
+    "cheerio": "^1.0.0",
     "firebase": "^10.13.0",
     "next": "14.2.6",
     "openai": "^4.56.0",
